--- a/src/app/shared/components/header/index.css
+++ b/src/app/shared/components/header/index.css
@@ -174,6 +174,7 @@
     opacity: 0;
     transition: opacity 0.3s ease;
     will-change: opacity;
+    z-index: -1;
 
     /* background: darkolivegreen !important; */
 
@@ -249,6 +250,7 @@
     height: 100%;
     padding: 0;
     background: unset !important;
+    opacity: 1;
   }
 }
 
